# sawtrs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: cliff.toml
.github/workflows/: ci.yml
docs/: learnings.md  used_crates.md
src/: downloader.rs  export.rs  main.rs  store.rs  transcriber.rs
