[package]
name = "sawtrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
comfy-table = "7.2.2"
csv = "1"
hound = "3.5.1"
thiserror = "2.0.18"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
usearch = "2"
whisper-rs = "0.15.1"
